// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should list out 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $2.35
      </span>
    </h1>
    <h2
      className="page-header__subtitle"
    >
      <i>
        <span />
         
        expenses
         hidden because of your filters.
      </i>
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
      <button
        className="button"
        onClick={[Function]}
      >
        Clear Filters
      </button>
    </div>
  </div>
</div>
`;

exports[`should list out 2 expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        3
      </span>
       
      expenses
       totalling 
      <span>
        $2,353.24
      </span>
    </h1>
    <h2
      className="page-header__subtitle"
    >
      <i>
        <span />
         
        expenses
         hidden because of your filters.
      </i>
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
      <button
        className="button"
        onClick={[Function]}
      >
        Clear Filters
      </button>
    </div>
  </div>
</div>
`;
